--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="./Globals.js"></script>
     <script src="./Menu.js"></script>
     <script src="./Dropper.js"></script>
+    <script src="./Globals.js"></script>
+    <script src="./Player.js"></script>
+    <script src="./Bullet.js"></script>
+    <script src="./Level.js"></script>
+
+
     <script src="./script.js"></script>
 </head>
 <body>
-
-<script>
-</script>
+<button id="button">Click</button>
 
 </body>
 </html>
