--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="./globals.js"></script>
-    <script src="./Menu.js"></script>
-    <script src="./Dropper.js"></script>
-    <script src="Setup.js"></script>
-</head>
-<body>
-<button id="button">Click</button>
-
-</body>
+    <head>
+        <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <script src="./globals.js"></script>
+        <script src="./Menu.js"></script>
+        <script src="./Dropper.js"></script>
+        <script src="Setup.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
+    </body>
 </html>
