The bonus text works

--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@
 
             <h2>More</h2>
             <ul>
-                <li>There are platforms and you are a bouncy ball. Avoid mines because they will end the game if touched. They can be destroyed by a bullet. </li>
-                <li>The spikes are another deadly enemy in this game. So hurry up!</li>
-                <li>The shield also acts as a bouncy platform so be careful.</li>
+                <li>You're a bouncy ball on platform world</li>
+                <li>If you step outside the world it's game over</li>
+                <li>If you on a Mine ith game over</li>
+                <li>If you touch a spike, guess what... GAME OVER</li>
+                <li>Every platform passed earns 1 point</li>
                 <li>You get more points if you drop trough more than 2 platforms without touching a platform</li>
+                <li>You collect bullets</li>
                 <li id="bulletTimer"></li>
+                <li>Mines can be destroyed by a bullet.</li>
+                <li>You collect shields</li>
+                <li>Shield makes you immune to Mines</li>
                 <li id="shieldTimer"></li>
+                <li>The shield also acts as a bouncy platform so be careful.</li>
                 <li id="chance"></li>
             </ul>
         </div>
