--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     </head>
     <body>
         <div id="about">
-            <h1>About</h1>
             <h2>Instructions</h2>
-            <p>A = move left</p>
-            <p>B = move right</p>
-            <p>SPACE = shoot bullet</p>
+            <p>A = Move left</p>
+            <p>D = Move right</p>
+            <p>SPACE = Shoot bullet / Start game</p>
 
             <h2>More</h2>
             <ul>
